# FrankClaw

./: .dockerignore  .env.docker.example  .env.smoke.example  .gitignore  CHANNEL_SETUP.md  CLAUDE.md  Cargo.toml  FEATURE_PLANS.md  PARITY_TODO.md  README.md  ROADMAP.md  docker-compose.yml  frankclaw.json.example  frankclaw.toml.example
crates/frankclaw-channels/: Cargo.toml
crates/frankclaw-channels/src/: discord.rs  email.rs  inbound_media.rs  lib.rs  media_text.rs  outbound_media.rs  outbound_text.rs  signal.rs  slack.rs  telegram.rs  web.rs  whatsapp.rs
crates/frankclaw-cli/: Cargo.toml
crates/frankclaw-cli/locales/: de.yml  en.yml  es.yml  fr.yml  it.yml  ja.yml  ko.yml  pt-BR.yml  pt-PT.yml
crates/frankclaw-cli/src/: main.rs  repl.rs  terminal.rs  tui.rs
crates/frankclaw-core/: Cargo.toml
crates/frankclaw-cron/: Cargo.toml
crates/frankclaw-gateway/: Cargo.toml
crates/frankclaw-media/: Cargo.toml
crates/frankclaw-memory/: Cargo.toml
crates/frankclaw-models/: Cargo.toml
crates/frankclaw-plugin-sdk/: Cargo.toml
crates/frankclaw-runtime/: Cargo.toml
crates/frankclaw-sessions/: Cargo.toml
crates/frankclaw-tools/: Cargo.toml
crates/frankclaw-tools/src/: aria.rs  audio.rs  bash.rs  browser_profiles.rs  config_tools.rs  cron_tools.rs  file.rs  image.rs  lib.rs  memory.rs  messaging.rs  pdf.rs  sessions.rs  web.rs
crates/frankclaw-tools/src/mcp/: mod.rs  protocol.rs
docker/chromium/: Dockerfile
docker/cloudflared/: config.yml.example
docker/frankclaw/: Dockerfile
docs/: OPENCLAW_REMAINING.md  WHATSAPP_SETUP.md
(+85 files in other folders)
